<resources>
    <string name="app_name">MAIGA Formations IPECO</string>
    <string name="title_activity_principal">MAIGA Formations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="username_error">Username or Password is Incorrect</string>
    <string name="email_error">Please insert email</string>
    <string name="password_error">Please insert password</string>
    <string name="name_error">Please Insert Name</string>
    <string name="user_error">Please Insert Username</string>
    <string name="confirm_pass_error">Please Insert Confirm Password</string>
    <string name="pass_confirm_error">Password And Confirm Password Not Matched</string>
    <string name="phone_error">Please Insert Phone Number</string>
    <string name="went_wrong_error">SomeThing Went Wrong</string>
    <string name="user_register_msg">User Registered Successfully</string>
    <string name="date">Date</string>
    <string name="date_expire">Expiration date</string>
    <string name="msisdn">Msisdn</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_offer">Subscribe</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="dashboard">Dashboard</string>
    <string name="payment_history">Payment History</string>
    <string name="history">History</string>
    <string name="our_offers">Our Offers</string>
    <string name="please_dial">Please Dial: *866*4*6*%1$s#</string>
    <string name="number">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="number_error">Enter Phone Number</string>
    <string name="otp_error">Enter OTP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="name_detail">Name</string>
    <string name="username">Username</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="phone_number">Email/Phone(xx xx xx xx)</string>
    <string name="start_test">Start Test</string>
    <string name="next">Next</string>
    <string name="your_score_is">Your Score is: %1$s</string>
    <string name="detail">Detail</string>
    <string name="mcq_history">MCQ History</string>
    <string name="score">Score</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="no_payment">No Payment History Available</string>
    <string name="no_mcq_history">No MCQ History Available</string>
    <string name="question">Question</string>
    <string name="orange_burkina_faso">Orange Burkina Faso</string>
    <string name="payment_success">Payment Success</string>
    <string name="payment_fail">Payment Failed</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mcq">MCQ</string>
    <string name="home">Home</string>
    <string name="trainings">Trainings</string>
    <string name="documents">Documents</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="contact_detail">Contact us with details below. We are here to assist you.</string>
    <string name="message">Message</string>
    <string name="directions">Ouagadougou, Sector N°17 Tanghin, Avenue de la Concorde Nationale, Door 427</string>
    <string name="telephone">Telephones: +226 76 50 66 66, +226 78 50 66 66, +226 62 50 66 66</string>
    <string name="email_text">maigaformationsipeco@ipecobf.com</string>
    <string name="whatsapp_text">+226 76 33 05 05</string>
    <string name="fc_text">MAIGA FORMATIONS IPECO</string>
    <string name="empty_message">Message Cannot be Empty</string>
    <string name="message_success">Message Sent Successfully</string>
    <string name="copyright_text">Copyright © %1$s MAIGA Formations IPECO, Tous droits réservés.</string>
    <string name="header_title">Welcome to MAIGA Formations IPECO (at your service since 1995)</string>
    <string name="header_desc">You train online and face-to-face for the various public service competitions.</string>
    <string name="image">Image</string>
    <string name="profile_update">Profile Updated Successfully</string>
    <string name="header_doc">In this section, you will find the documents produced each year by MAIGA Formations IPECO and its collaborators.</string>
    <string name="point_sale">Points of sale</string>
    <string name="title_training">With MAIGA Formations IPECO, take advantage of a range of MCQs to boost your chances of success in civil service competitions.</string>
    <string name="training_face">Our face-to-face training</string>
    <string name="training_desc">These are preparatory training courses for direct public service competitions which take place in classrooms in Ouagadougou and in regional capitals every Saturday and Sunday from 9 a.m. to 11.30 a.m. or 3 p.m. to 5.30 p.m.</string>
    <string name="training_online">Our online courses</string>
    <string name="run">Run</string>
    <string name="renew">Renew</string>
    <string name="subscribe_traing">Subscribe</string>
    <string name="payment">Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rank">Rank</string>
</resources>
